--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,28 @@
 	    <artifactId>kafka_2.12</artifactId>
 	    <version>2.0.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.apache.hadoop</groupId>
+	    <artifactId>hadoop-common</artifactId>
+	    <version>2.9.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.hadoop</groupId>
+	    <artifactId>hadoop-hdfs</artifactId>
+	    <version>2.9.1</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.hadoop</groupId>
+	    <artifactId>hadoop-client</artifactId>
+	    <version>2.9.1</version>
+	</dependency>
+	<dependency>
+        <groupId>jdk.tools</groupId>
+        <artifactId>jdk.tools</artifactId>
+        <version>1.8</version>
+        <scope>system</scope>
+        <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+    </dependency>
   </dependencies>
   <build>
 	<pluginManagement>
@@ -34,8 +56,8 @@
 		<artifactId>maven-compiler-plugin</artifactId>
 		<version>3.1</version>
 	<configuration>
-		<source>${java.version}</source>
-		<target>${java.version}</target>
+		<source>1.8</source>
+		<target>1.8</target>
 	</configuration> 
 	</plugin>
 	</plugins>
